<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Flint Android</string>
    <string name="app_short_name">Flint</string>
    <string name="login_online_username_hint">Username</string>
    <string name="login_online_login_label">Login</string>
    <string name="hint_control_mapping">"Touch the top center cogwheel to open the context menu ⚙\nTap a button to customize: edit, resize, remove, or change its keybinds."</string>
    <string name="warning_remove_account">This account will be removed!</string>
    <string name="alerttitle_installmod">Select a mod installer</string>
    <string name="error_fatal">Flint has unexpectedly crashed</string>
    <string name="error_no_version">No version!</string>
    <string name="error_show_more">Show more</string>
    <string name="error_show_less">Show less</string>
    <string name="toast_permission_denied">The read/write to storage permission is required!</string>
    <string name="toast_optifine_success">Install successful</string>
    <string name="mcl_tab_wiki">Wiki</string>
    <string name="mcl_launch_cleancache">Cleaning cache files</string>
    <string name="mcl_launch_downloading">Downloading %s</string>
    <string name="mcl_launch_downloading_progress">"Downloading %s (%.2f MB / %.2f MB)"</string>
    <string name="mcl_launch_download_assets">Preparing to download resources</string>
    <string name="mcl_options">Options</string>
    <string name="mcl_option_customcontrol">Custom controls</string>
    <string name="mcl_setting_title_use_surface_view">Use alternate surface rendering</string>
    <string name="mcl_setting_subtitle_use_surface_view">May help performance in GPU bound scenarios.</string>
    <string name="mcl_setting_title_ignore_notch">Ignore notch</string>
    <string name="mcl_setting_subtitle_ignore_notch">Ignores the notch and extends the screen under it.\nGives you a more immersive experience.</string>
    <string name="mcl_setting_title_resolution_scaler">Resolution Scaler</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Allows you to decrease the game resolution. 100% is full resolution.</string>
    <string name="mcl_setting_title_longpresstrigger">Trigger long press delay</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Change long press trigger delay for destroying blocks and dropping items.</string>
    <string name="mcl_setting_title_buttonscale">Control buttons scaling</string>
    <string name="mcl_setting_subtitle_buttonscale">Upscale them if the buttons are too small.</string>
    <string name="mcl_setting_title_mousescale">Mouse scaling</string>
    <string name="mcl_setting_subtitle_mousescale">Change the size of the virtual mouse.</string>
    <string name="mcl_setting_title_javaargs">JVM Launch arguments</string>
    <string name="mcl_setting_subtitle_javaargs">Be careful, this may make game crash if modified without knowledge.</string>
    <string name="mcl_setting_category_renderer">Renderer</string>
    <string name="mcl_setting_renderer_gles2_4">Holy GL4ES - (all versions, fast)</string>
    <string name="mcl_setting_renderer_vulkan_zink">Zink (Vulkan) - (all versions, mid)</string>
    <string name="mcl_setting_renderer_ltw">LTW (OpenGL ES 3) - 1.17+ only</string>
    <string name="mcl_setting_veroption_release">Release</string>
    <string name="mcl_setting_veroption_snapshot">Snapshot</string>
    <string name="mcl_setting_veroption_oldalpha">Old-alpha</string>
    <string name="mcl_setting_veroption_oldbeta">Old-beta</string>
    <string name="mcl_setting_java_sandbox">Sandbox .jar execution</string>
    <string name="mcl_setting_java_sandbox_subtitle">Control the availability of the sandbox security manager when executing a .jar file.</string>
    <string name="mcl_version_clone">Clone</string>
    <string name="global_edit">Edit</string>
    <string name="global_error">Error</string>
    <string name="global_load">Load</string>
    <string name="global_name">Name</string>
    <string name="global_remove">Remove</string>
    <string name="global_clone">Clone</string>
    <string name="global_restart">Restart</string>
    <string name="global_save">Save</string>
    <string name="global_unpacking">Unpacking %s</string>
    <string name="global_error_field_empty">This field can\'t be empty</string>
    <string name="global_waiting">Wait</string>
    <string name="global_select">Select</string>
    <string name="global_retry">Retry</string>
    <string name="global_default">Default</string>
    <string name="mcn_exit_title">Minecraft exited with code %1$d. Check latestlog.txt for more details.</string>
    <string name="mcn_signal_title">Application/Game aborted by fatal signal %d, check latestlog.txt for more details.</string>
    <string name="mcn_exit_confirm">Are you sure want to force close?</string>
    <string name="mcn_check_fail_vulkan_support">Zink (Vulkan) renderer is not supported on this device!</string>
    <string name="control_chat">Chat</string>
    <string name="control_debug">Debug</string>
    <string name="control_primary">Pri</string>
    <string name="control_secondary">Sec</string>
    <string name="control_shift">◇</string>
    <string name="control_inventory">Inv</string>
    <string name="control_up">▲</string>
    <string name="control_left">◀</string>
    <string name="control_right">▶</string>
    <string name="control_down">▼</string>
    <string name="control_jump">⬛</string>
    <string name="control_thirdperson">3rd</string>
    <string name="control_listplayers">Tab</string>
    <string name="control_mouse">Mouse</string>
    <string name="control_mouseoff">Mouse: off</string>
    <string name="control_mouseon">Mouse: on </string>
    <string name="control_forceclose">Force close</string>
    <string name="control_viewout">Log output</string>
    <string name="control_adebug">Input Debug</string>
    <string name="control_customkey">Send custom keycode</string>
    <string name="import_control_label">Import controls</string>
    <string name="import_control_invalid_file">Invalid or corrupted file</string>
    <string name="import_control_import_button">import controls</string>
    <string name="import_control_verifying_file">File is being verified, please wait and try again…</string>
    <string name="import_control_invalid_name">Invalid name or file already exists</string>
    <string name="import_control_done">Importation done</string>
    <string name="customctrl_toggle">Toggleable</string>
    <string name="customctrl_size">Size</string>
    <string name="customctrl_mapping">Mapping</string>
    <string name="customctrl_orientation">Orientation</string>
    <string name="customctrl_background_color">Background color</string>
    <string name="customctrl_corner_radius">Corner radius</string>
    <string name="customctrl_stroke_width">Stroke width</string>
    <string name="customctrl_stroke_color">Stroke color</string>
    <string name="customctrl_button_opacity">Button Opacity</string>
    <string name="customctrl_addbutton">Add button</string>
    <string name="customctrl_addbutton_drawer">Add button drawer</string>
    <string name="customctrl_addbutton_joystick">Add joystick</string>
    <string name="customctrl_addsubbutton">Add sub-button</string>
    <string name="customctrl_selectdefault">Select default controlmap</string>
    <string name="customctrl_export">Export controlmap</string>
    <string name="main_share_logs">Share log file</string>
    <string name="main_install_jar_file">Execute a .jar</string>
    <string name="main_play">Play</string>
    <string name="home_brand_subtitle">Android launcher</string>
    <string name="home_ready_to_play">Ready to play</string>
    <string name="home_game_title">Minecraft: Java Edition</string>
    <string name="home_game_subtitle">Choose your profile, then launch your game.</string>
    <string name="home_selected_profile">Selected profile and version</string>
    <string name="home_change_profile_hint">Tap the profile to switch. Use edit to manage its settings.</string>
    <string name="home_edit_profile">Edit selected profile</string>
    <string name="home_quick_access">Quick access</string>
    <string name="home_tools_subtitle">Launcher tools and community</string>
    <string name="home_ready_to_launch">Your game is ready</string>
    <string name="flint_nav_home">Home</string>
    <string name="flint_nav_profiles">Profiles</string>
    <string name="flint_nav_mods">Mods</string>
    <string name="flint_nav_cosmetics">Cosmetics</string>
    <string name="flint_nav_settings">Settings</string>
    <string name="flint_account_label">Account</string>
    <string name="flint_local_mode">Local launcher</string>
    <string name="flint_cosmetics_deferred">Cosmetics are planned for a later Flint Android phase.</string>
    <string name="flint_discord_link">Flint Discord</string>
    <string name="flint_website_link">Flint website</string>
    <string name="flint_discord_url" translatable="false">https://discord.gg/atWfHfwjYy</string>
    <string name="flint_website_url" translatable="false">https://flintlauncher.vercel.app</string>
    <string name="home_playing_on_android">Playing on Flint Android</string>
    <string name="home_profile_details">Minecraft %1$s · %2$s</string>
    <string name="home_profile_unavailable">Choose or create a profile to continue</string>
    <string name="home_loader_vanilla">Vanilla</string>
    <string name="home_loader_fabric">Fabric</string>
    <string name="home_loader_forge">Forge</string>
    <string name="home_loader_quilt">Quilt</string>
    <string name="home_loader_optifine">OptiFine</string>
    <string name="home_performance_preset">Performance preset</string>
    <string name="home_performance_description">Profile-specific renderer, memory and controls</string>
    <string name="home_manage_setup">Manage setup</string>
    <string name="home_flint_community">Flint community</string>
    <string name="flint_tools_title">Launcher tools</string>
    <string name="flint_tools_description">Controls, installers, logs and game files</string>
    <string name="flint_profiles_title">Profiles</string>
    <string name="flint_profiles_subtitle">Create, select and configure independent Minecraft setups.</string>
    <string name="flint_profile_add">New profile</string>
    <string name="flint_profile_active">Active</string>
    <string name="flint_profile_keep_one">Flint needs at least one profile.</string>
    <string name="flint_profile_delete_title">Delete profile?</string>
    <string name="flint_profile_delete_message">Delete %1$s and its launcher settings? Game files are not removed.</string>
    <string name="flint_local_missing_files">This local account can launch only when all required game files are already installed and verified. A required file is missing or changed. Sign in with an entitled Microsoft account to download it, or restore a legitimate local installation.</string>
    <string name="flint_preflight_title">Minecraft files need attention</string>
    <string name="flint_preflight_detail">%1$s is %2$s:\n%3$s</string>
    <string name="flint_preflight_hashes">Expected SHA-1: %1$s\nInstalled SHA-1: %2$s</string>
    <string name="flint_preflight_version_metadata">Version metadata</string>
    <string name="flint_preflight_asset_index">Asset index</string>
    <string name="flint_preflight_client">Minecraft client</string>
    <string name="flint_preflight_library">Required library</string>
    <string name="flint_preflight_asset">Required asset</string>
    <string name="flint_preflight_logging">Logging configuration</string>
    <string name="flint_preflight_missing">missing</string>
    <string name="flint_preflight_not_file">not a regular file</string>
    <string name="global_delete">Delete</string>
    <string name="mcl_button_open_directory">Open game directory</string>
</resources>